# nixl

./: .gitignore  ATTRIBUTIONS-CPP.md  ATTRIBUTIONS-Python.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  meson.build  meson_options.txt  nixlbench_101.md  pyproject.toml
.agents/skills/nixl-python-api/: SKILL.md
.agents/skills/nixl-python-api/references/: agent-backend.md  memory-descriptors.md  metadata-exchange.md  notifications.md  pitfalls.md  security-trust-boundaries.md  source-precedence.md  storage-and-partial-metadata.md  transfers-polling-cleanup.md
.ci/jenkins/lib/: build-container-matrix.yaml  build-matrix.yaml  test-dl-matrix.yaml  test-matrix.yaml
.ci/jenkins/pipeline/: proj-jjb.yaml
.gitlab/: build.sh  test_rust.sh
benchmark/kvbench/: main.py  pyproject.toml
benchmark/kvbench/commands/: args.py  nixlbench.py
benchmark/nixlbench/: README.md  meson.build
benchmark/nixlbench/contrib/: Dockerfile
benchmark/nixlbench/src/: main.cpp
benchmark/nixlbench/src/utils/: meson.build  neuron.h  utils.cpp  utils.h
benchmark/nixlbench/src/worker/nixl/: nixl_worker.cpp
contrib/: Dockerfile  Dockerfile.manylinux  build-wheel.sh
docs/: telemetry.md
examples/cpp/: telemetry_reader.cpp
examples/device/ep/: meson.build
examples/device/ep/csrc/: nixl_ep.cpp  nixl_ep.hpp
examples/device/ep/csrc/kernels/: api.cuh  nixl_ep_ht.cu
examples/device/ep/nixl_ep/: buffer.py
examples/python/: telemetry_reader.py
src/api/cpp/backend/: backend_engine.h  backend_plugin.h
src/bindings/python/: nixl_bindings.cpp
src/bindings/rust/: build.rs
src/core/: meson.build  nixl_agent.cpp
src/core/telemetry/: telemetry.cpp  telemetry.h  telemetry_event.h
src/infra/: mem_section.h  nixl_descriptors.cpp  nixl_memory_section.cpp
src/plugins/azure_blob/: meson.build
src/plugins/cuda_gds/: meson.build
src/plugins/gds_mt/: meson.build
src/plugins/gpunetio/: meson.build
src/plugins/gusli/: meson.build
src/plugins/hf3fs/: meson.build
src/plugins/libfabric/: meson.build
src/plugins/mooncake/: meson.build
src/plugins/posix/: README.md  io_uring_io_queue.cpp  meson.build
src/plugins/telemetry/: README.md
src/plugins/telemetry/doca/: README.md  doca_exporter.cpp  meson.build
src/plugins/telemetry/prometheus/: README.md  prometheus_exporter.cpp  prometheus_exporter.h
src/plugins/uccl/: README.md  meson.build  uccl_backend.cpp  uccl_backend.h
src/plugins/ucx/: config.cpp  ucx_utils.cpp
src/utils/common/: configuration.cpp  configuration.h  exception.h
subprojects/: liburing.wrap
subprojects/packagefiles/liburing/: meson.build
subprojects/packagefiles/liburing/src/: meson.build
subprojects/packagefiles/liburing/src/include/: meson.build
subprojects/packagefiles/liburing/src/include/liburing/: compat.h.meson  meson.build
test/: meson.build
test/gtest/: configuration.cpp  error_handling.cpp  meson.build  telemetry_prometheus_test.cpp  telemetry_test.cpp
test/gtest/plugins/: meson.build
test/gtest/plugins/azure_blob/: meson.build
test/gtest/unit/descriptors/: sec_desc_list.cpp
test/unit/plugins/: meson.build
test/unit/plugins/object/: meson.build
