# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cpp_flags = []
object_test_deps = [nixl_dep, nixl_infra, nixl_common_dep, stream_interface,
                    aws_s3.partial_dependency(compile_args: false, includes: true, link_args: true, links: true)]

if cuda_dep.found()
    cpp_flags += '-DHAVE_CUDA'
    object_test_deps += [cuda_dep]
else
    cpp_flags += '-UHAVE_CUDA'
endif

nixl_object_app = executable('nixl_object_test', 'nixl_object_test.cpp',
                          dependencies: object_test_deps,
                          cpp_args: cpp_flags,
                          include_directories: [nixl_inc_dirs, utils_inc_dirs],
                          install: true)
